--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.4.4",
-    "nodemon": "^1.18.11"
+    "@babel/preset-env": "^7.4.4"
   },
   "dependencies": {
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "nodemon": "^1.18.11"
   }
 }
