--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/jadsonluan/organiza-horarios-api/issues"
   },
-  "homepage": "https://github.com/jadsonluan/organiza-horarios-api#readme",,
+  "homepage": "https://github.com/jadsonluan/organiza-horarios-api#readme",
   "dependencies": {
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
