--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Uma API para extrair dados de planilhas .csv utilizadas na matrícula de Computação@UFCG",
   "main": "api/app.js",
   "scripts": {
-    "start": "babel-node api/app.js",
+    "start": "nodemon --exec babel-node api/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/jadsonluan/organiza-horarios-api#readme",
   "devDependencies": {
-    "nodemon": "^1.18.11"
-  },
-  "dependencies": {
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.4",
+    "nodemon": "^1.18.11"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "fs": "0.0.1-security"
